fix: parser return strings, added trim